CREATE TABLE books
(
    id           INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts    TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    update_ts    TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    isbn         VARCHAR(255),
    title        VARCHAR(255),
    description  TEXT,
    author       VARCHAR(255),
    price        DECIMAL,
    in_stock     INTEGER,
    url_slug     VARCHAR(255),
    category_id  INTEGER,
    collection_id  INTEGER,
    publisher    VARCHAR(255),
    publish_year INTEGER,
    page_count   INTEGER,
    image_url    VARCHAR(255),
    CONSTRAINT pk_books PRIMARY KEY (id)
);

CREATE TABLE cart_items
(
    id        INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    update_ts TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    quantity  INTEGER,
    cart_id   INTEGER,
    book_id   INTEGER,
    CONSTRAINT pk_cart_items PRIMARY KEY (id)
);

CREATE TABLE carts
(
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts   TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    update_ts   TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    user_id     INTEGER,
    cart_status VARCHAR(255),
    CONSTRAINT pk_carts PRIMARY KEY (id)
);

CREATE TABLE categories
(
    id            INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts     TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    update_ts     TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    category_name VARCHAR(255),
    category_slug VARCHAR(255),
    parent_id     INTEGER,
    CONSTRAINT pk_categories PRIMARY KEY (id)
);

CREATE TABLE customer_addresses
(
    id        INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    update_ts TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    city      VARCHAR(255),
    commune   VARCHAR(255),
    street    VARCHAR(255),
    user_id   INTEGER,
    CONSTRAINT pk_customer_addresses PRIMARY KEY (id)
);

CREATE TABLE order_items
(
    id                INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts         TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    update_ts         TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    quantity          INTEGER,
    price_at_purchase DECIMAL,
    title_at_purchase VARCHAR(255),
    isbn              VARCHAR(255),
    product_code      VARCHAR(255),
    order_id          INTEGER,
    book_id           INTEGER,
    CONSTRAINT pk_order_items PRIMARY KEY (id)
);

CREATE TABLE orders
(
    id             INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts      TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    update_ts      TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    email          VARCHAR(255),
    phone_number   VARCHAR(255),
    first_name     VARCHAR(255),
    last_name      VARCHAR(255),
    note           VARCHAR(255),
    order_status   VARCHAR(255),
    payment_method VARCHAR(255),
    coupon_code    VARCHAR(255),
    items_total   DECIMAL,
    shipping_fee   DECIMAL,
    order_total   DECIMAL,
    order_date     date,
    city           VARCHAR(255),
    commune        VARCHAR(255),
    street         VARCHAR(255),
    CONSTRAINT pk_orders PRIMARY KEY (id)
);

CREATE TABLE refresh_tokens
(
    id            INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts     TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    update_ts     TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    refresh_token VARCHAR(255),
    expiration    TIMESTAMP WITHOUT TIME ZONE,
    user_id       INTEGER,
    CONSTRAINT pk_refresh_tokens PRIMARY KEY (id)
);

CREATE TABLE users
(
    id           INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts    TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    update_ts    TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    user_type    VARCHAR(255),
    email        VARCHAR(255),
    first_name   VARCHAR(255),
    last_name    VARCHAR(255),
    password     VARCHAR(255),
    phone_number VARCHAR(255),
    CONSTRAINT pk_users PRIMARY KEY (id)
);

CREATE TABLE collections
(
    id              INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts       TIMESTAMP WITHOUT TIME ZONE,
    update_ts       TIMESTAMP WITHOUT TIME ZONE,
    collection_name VARCHAR(255),
    collection_slug VARCHAR(255),
    CONSTRAINT pk_collections PRIMARY KEY (id)
);

CREATE TABLE coupons
(
    id               INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts        TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    update_ts        TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW(),
    code             VARCHAR(255)                             NOT NULL,
    discount_type    VARCHAR(255),
    discount_value   DECIMAL,
    min_order_amount DECIMAL,
    max_uses         INTEGER,
    used_count       INTEGER,
    valid_from       TIMESTAMP WITHOUT TIME ZONE,
    valid_until      TIMESTAMP WITHOUT TIME ZONE,
    is_active        BOOLEAN,
    CONSTRAINT pk_coupons PRIMARY KEY (id)
);

ALTER TABLE books
    ADD CONSTRAINT uc_books_isbn UNIQUE (isbn);

ALTER TABLE refresh_tokens
    ADD CONSTRAINT uc_refresh_tokens_user UNIQUE (user_id);

ALTER TABLE users
    ADD CONSTRAINT uc_users_email UNIQUE (email);

ALTER TABLE books
    ADD CONSTRAINT FK_BOOKS_ON_CATEGORY FOREIGN KEY (category_id) REFERENCES categories (id);

ALTER TABLE books
    ADD CONSTRAINT FK_BOOKS_ON_COLLECTION FOREIGN KEY (collection_id) REFERENCES collections (id);

ALTER TABLE carts
    ADD CONSTRAINT FK_CARTS_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);

ALTER TABLE cart_items
    ADD CONSTRAINT FK_CART_ITEMS_ON_BOOK FOREIGN KEY (book_id) REFERENCES books (id);

ALTER TABLE cart_items
    ADD CONSTRAINT FK_CART_ITEMS_ON_CART FOREIGN KEY (cart_id) REFERENCES carts (id);

ALTER TABLE categories
    ADD CONSTRAINT FK_CATEGORIES_ON_PARENT FOREIGN KEY (parent_id) REFERENCES categories (id);

ALTER TABLE customer_addresses
    ADD CONSTRAINT FK_CUSTOMER_ADDRESSES_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);

ALTER TABLE order_items
    ADD CONSTRAINT FK_ORDER_ITEMS_ON_BOOK FOREIGN KEY (book_id) REFERENCES books (id);

ALTER TABLE order_items
    ADD CONSTRAINT FK_ORDER_ITEMS_ON_ORDER FOREIGN KEY (order_id) REFERENCES orders (id);

ALTER TABLE refresh_tokens
    ADD CONSTRAINT FK_REFRESH_TOKENS_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);

ALTER TABLE coupons
    ADD CONSTRAINT uc_coupons_code UNIQUE (code);
