CREATE TABLE authors
(
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts   TIMESTAMP WITHOUT TIME ZONE,
    update_ts   TIMESTAMP WITHOUT TIME ZONE,
    author_name VARCHAR(255),
    CONSTRAINT pk_authors PRIMARY KEY (id)
);

CREATE TABLE book_author
(
    author_id INTEGER NOT NULL,
    book_id   INTEGER NOT NULL
);

CREATE TABLE book_collection
(
    book_id       INTEGER NOT NULL,
    collection_id INTEGER NOT NULL
);

CREATE TABLE books
(
    id           INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts    TIMESTAMP WITHOUT TIME ZONE,
    update_ts    TIMESTAMP WITHOUT TIME ZONE,
    isbn         VARCHAR(255),
    title        VARCHAR(255),
    description  VARCHAR(255),
    price        DECIMAL,
    in_stock     INTEGER,
    product_code VARCHAR(255),
    supplier_id  INTEGER,
    publisher_id INTEGER,
    publish_year INTEGER,
    language     VARCHAR(255),
    weight       INTEGER,
    dimensions   VARCHAR(255),
    page_count   INTEGER,
    format       VARCHAR(255),
    image_url    VARCHAR(255),
    CONSTRAINT pk_books PRIMARY KEY (id)
);

CREATE TABLE cart_items
(
    id        INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts TIMESTAMP WITHOUT TIME ZONE,
    update_ts TIMESTAMP WITHOUT TIME ZONE,
    quantity  INTEGER,
    cart_id   INTEGER,
    book_id   INTEGER,
    CONSTRAINT pk_cart_items PRIMARY KEY (id)
);

CREATE TABLE carts
(
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts   TIMESTAMP WITHOUT TIME ZONE,
    update_ts   TIMESTAMP WITHOUT TIME ZONE,
    user_id     INTEGER,
    cart_status VARCHAR(255),
    CONSTRAINT pk_carts PRIMARY KEY (id)
);

CREATE TABLE categories
(
    id            INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts     TIMESTAMP WITHOUT TIME ZONE,
    update_ts     TIMESTAMP WITHOUT TIME ZONE,
    category_desc VARCHAR(255),
    category_name VARCHAR(255),
    CONSTRAINT pk_categories PRIMARY KEY (id)
);

CREATE TABLE collections
(
    id              INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts       TIMESTAMP WITHOUT TIME ZONE,
    update_ts       TIMESTAMP WITHOUT TIME ZONE,
    collection_name VARCHAR(255),
    CONSTRAINT pk_collections PRIMARY KEY (id)
);

CREATE TABLE order_items
(
    id                INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts         TIMESTAMP WITHOUT TIME ZONE,
    update_ts         TIMESTAMP WITHOUT TIME ZONE,
    quantity          INTEGER,
    price_at_purchase DECIMAL,
    title_at_purchase VARCHAR(255),
    isbn              VARCHAR(255),
    product_code      VARCHAR(255),
    order_id          INTEGER,
    book_id           INTEGER,
    CONSTRAINT pk_order_items PRIMARY KEY (id)
);

CREATE TABLE orders
(
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts   TIMESTAMP WITHOUT TIME ZONE,
    update_ts   TIMESTAMP WITHOUT TIME ZONE,
    customer_id INTEGER,
    CONSTRAINT pk_orders PRIMARY KEY (id)
);

CREATE TABLE publishers
(
    id             INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts      TIMESTAMP WITHOUT TIME ZONE,
    update_ts      TIMESTAMP WITHOUT TIME ZONE,
    publisher_name VARCHAR(255),
    CONSTRAINT pk_publishers PRIMARY KEY (id)
);

CREATE TABLE refresh_tokens
(
    id            INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts     TIMESTAMP WITHOUT TIME ZONE,
    update_ts     TIMESTAMP WITHOUT TIME ZONE,
    refresh_token VARCHAR(255),
    expiration    TIMESTAMP WITHOUT TIME ZONE,
    user_id       INTEGER,
    CONSTRAINT pk_refresh_tokens PRIMARY KEY (id)
);

CREATE TABLE suppliers
(
    id            INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts     TIMESTAMP WITHOUT TIME ZONE,
    update_ts     TIMESTAMP WITHOUT TIME ZONE,
    supplier_name VARCHAR(255),
    CONSTRAINT pk_suppliers PRIMARY KEY (id)
);

CREATE TABLE users
(
    id         INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    create_ts  TIMESTAMP WITHOUT TIME ZONE,
    update_ts  TIMESTAMP WITHOUT TIME ZONE,
    user_type  VARCHAR(255),
    email      VARCHAR(255),
    first_name VARCHAR(255),
    last_name  VARCHAR(255),
    password   VARCHAR(255),
    CONSTRAINT pk_users PRIMARY KEY (id)
);

ALTER TABLE books
    ADD CONSTRAINT uc_books_isbn UNIQUE (isbn);

ALTER TABLE books
    ADD CONSTRAINT uc_books_product_code UNIQUE (product_code);

ALTER TABLE refresh_tokens
    ADD CONSTRAINT uc_refresh_tokens_user UNIQUE (user_id);

ALTER TABLE users
    ADD CONSTRAINT uc_users_email UNIQUE (email);

ALTER TABLE books
    ADD CONSTRAINT FK_BOOKS_ON_PUBLISHER FOREIGN KEY (publisher_id) REFERENCES publishers (id);

ALTER TABLE books
    ADD CONSTRAINT FK_BOOKS_ON_SUPPLIER FOREIGN KEY (supplier_id) REFERENCES suppliers (id);

ALTER TABLE carts
    ADD CONSTRAINT FK_CARTS_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);

ALTER TABLE cart_items
    ADD CONSTRAINT FK_CART_ITEMS_ON_BOOK FOREIGN KEY (book_id) REFERENCES books (id);

ALTER TABLE cart_items
    ADD CONSTRAINT FK_CART_ITEMS_ON_CART FOREIGN KEY (cart_id) REFERENCES carts (id);

ALTER TABLE orders
    ADD CONSTRAINT FK_ORDERS_ON_CUSTOMER FOREIGN KEY (customer_id) REFERENCES users (id);

ALTER TABLE order_items
    ADD CONSTRAINT FK_ORDER_ITEMS_ON_BOOK FOREIGN KEY (book_id) REFERENCES books (id);

ALTER TABLE order_items
    ADD CONSTRAINT FK_ORDER_ITEMS_ON_ORDER FOREIGN KEY (order_id) REFERENCES orders (id);

ALTER TABLE refresh_tokens
    ADD CONSTRAINT FK_REFRESH_TOKENS_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);

ALTER TABLE book_author
    ADD CONSTRAINT fk_booaut_on_author FOREIGN KEY (author_id) REFERENCES authors (id);

ALTER TABLE book_author
    ADD CONSTRAINT fk_booaut_on_book FOREIGN KEY (book_id) REFERENCES books (id);

ALTER TABLE book_collection
    ADD CONSTRAINT fk_boocol_on_book FOREIGN KEY (book_id) REFERENCES books (id);

ALTER TABLE book_collection
    ADD CONSTRAINT fk_boocol_on_collection FOREIGN KEY (collection_id) REFERENCES collections (id);